[gd_scene load_steps=16 format=2]

[ext_resource path="res://enemies/PosessedSwordsman/state_machine/PosessedSwordsmanFSM.gd" type="Script" id=1]
[ext_resource path="res://enemies/PosessedSwordsman/state_machine/StunnedState.gd" type="Script" id=2]
[ext_resource path="res://enemies/PosessedSwordsman/state_machine/ChargingState.gd" type="Script" id=3]
[ext_resource path="res://enemies/PosessedSwordsman/state_machine/IdleState.gd" type="Script" id=4]
[ext_resource path="res://enemies/PosessedSwordsman/state_machine/AdvancingState.gd" type="Script" id=5]
[ext_resource path="res://enemies/PosessedSwordsman/state_machine/FlankingState.gd" type="Script" id=6]
[ext_resource path="res://enemies/PosessedSwordsman/state_machine/AttackingState.gd" type="Script" id=7]
[ext_resource path="res://enemies/PosessedSwordsman/state_machine/DeadState.gd" type="Script" id=8]
[ext_resource path="res://enemies/PosessedSwordsman/state_machine/RecoilingState.gd" type="Script" id=9]
[ext_resource path="res://enemies/PosessedSwordsman/state_machine/DefendingState.gd" type="Script" id=10]
[ext_resource path="res://enemies/PosessedSwordsman/state_machine/FaintAttackingState.gd" type="Script" id=11]
[ext_resource path="res://enemies/PosessedSwordsman/state_machine/AttackRecoverState.gd" type="Script" id=12]
[ext_resource path="res://enemies/PosessedSwordsman/state_machine/PreAttackingState.gd" type="Script" id=13]
[ext_resource path="res://enemies/PosessedSwordsman/state_machine/FlankingStateBlocking.gd" type="Script" id=14]
[ext_resource path="res://enemies/PosessedSwordsman/state_machine/SidestepState.gd" type="Script" id=15]

[node name="StateMachine" type="Node"]
script = ExtResource( 1 )

[node name="AttackingState" type="Node" parent="."]
script = ExtResource( 7 )

[node name="AttackCooldownTimer" type="Timer" parent="AttackingState"]

[node name="AdvancingState" type="Node" parent="."]
script = ExtResource( 5 )

[node name="EnterFlankTimer" type="Timer" parent="AdvancingState"]
wait_time = 0.001
one_shot = true

[node name="FlankingStateBlocking" type="Node" parent="."]
script = ExtResource( 14 )

[node name="FlankingTimer" type="Timer" parent="FlankingStateBlocking"]
one_shot = true

[node name="FlankingState" type="Node" parent="."]
script = ExtResource( 6 )

[node name="FlankingTimer" type="Timer" parent="FlankingState"]
one_shot = true

[node name="IdleState" type="Node" parent="."]
script = ExtResource( 4 )

[node name="RecoilingState" type="Node" parent="."]
script = ExtResource( 9 )

[node name="RecoilingTimer" type="Timer" parent="RecoilingState"]
wait_time = 0.2
one_shot = true

[node name="DefendingState" type="Node" parent="."]
script = ExtResource( 10 )

[node name="DefendingTimer" type="Timer" parent="DefendingState"]
wait_time = 0.6
one_shot = true

[node name="StunnedState" type="Node" parent="."]
script = ExtResource( 2 )

[node name="StunnedTimer" type="Timer" parent="StunnedState"]
wait_time = 0.5
one_shot = true

[node name="DeadState" type="Node" parent="."]
script = ExtResource( 8 )

[node name="ChargingState" type="Node" parent="."]
script = ExtResource( 3 )

[node name="DamageDelayTimer" type="Timer" parent="ChargingState"]
wait_time = 0.1
one_shot = true

[node name="ChargingTimer" type="Timer" parent="ChargingState"]
wait_time = 0.25
one_shot = true

[node name="FaintAttackingState" type="Node" parent="."]
script = ExtResource( 11 )

[node name="FaintAttackTimer" type="Timer" parent="FaintAttackingState"]
wait_time = 0.1
one_shot = true

[node name="DamageDelayTimer" type="Timer" parent="FaintAttackingState"]
wait_time = 0.05

[node name="AttackRecoverState" type="Node" parent="."]
script = ExtResource( 12 )

[node name="AttackCooldownTimer" type="Timer" parent="AttackRecoverState"]
wait_time = 0.6
one_shot = true

[node name="PreAttackingState" type="Node" parent="."]
script = ExtResource( 13 )

[node name="TelegraphTimer" type="Timer" parent="PreAttackingState"]
wait_time = 0.3
one_shot = true

[node name="SidestepState" type="Node" parent="."]
script = ExtResource( 15 )

[node name="SidestepTimer" type="Timer" parent="SidestepState"]
wait_time = 0.2
one_shot = true
